<resources>
    <string name="app_name">TurismLocalization</string>
    <string name="app_name2"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nome">Nome</string>
    <string name="sexo">Sexo</string>
    <string name="idade">Idade</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="contato">Contato</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="login">Login</string>
    <string name="sair">Sair</string>
    <string name="config">Configurações</string>
    <string name="camera">Câmera</string>
    <string name="abre">Open</string>
    <string name="fecha">Close</string>
    <string name="pesquisa">Pesquisar</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtHintSearch">Digite um Endereço ou ponto desejado</string>
    <string name="destino">Destino</string>
    <string name="partida">Partida</string>
    <string name="btn_buscar">Buscar</string>
</resources>
